# test-poetry

./: .README.md.un~  .gitignore  .pyproject.toml.un~  README.md  pyproject.toml  pyproject.toml~
try-poetry/: .Pi.py.un~  .__init__.py.un~  .__main__.py.un~  Pi.py  __main__.py  __main__.py~
