[tool.poetry]
name = "try-poetry"
version = "0.1.0"
description = "It's a small project testing the functions of poetry."
authors = ["Chia-Jui Chou <agoodmanjerry@gmail.com>"]
readme = "README.md"
packages = [{include = "try_poetry"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
